--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
     "mydatepicker": "^2.6.11",
+    "ng-simple-slideshow": "^1.2.9",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
