--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
               
             ],
             "scripts": [
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"
             ]
           },
           "configurations": {
